Revised the task 1 and 2 and tested them once again